fixed multiple upload file label -- does not fix the layout problem in uploaded files box

--- a/web-app/css/ed/messages-errors.css
+++ b/web-app/css/ed/messages-errors.css
@@ -306,3 +306,8 @@ ul.one-to-many li.add {
 h3 {
 	color: #ae895e;
 }
+
+.placeholder {
+	margin-top: 100px;
+	
+}
